fixed  possibilities page.

--- a/possibilities-jack-aspen-harper.html
+++ b/possibilities-jack-aspen-harper.html
@@ -88,14 +88,11 @@
 
           <div class="hv-happy-ending">
             <p class="bio-text">
-              This is how I envision myself two years from now — grounded, creatively
-              fulfilled, emotionally unflutterable, and living inside a life that
-              finally fits. New York City? Beverly Hills? Portland? Honestly, I could see
-              myself just about anywhere—EXCEPT Western Colorado.
+              This is how I envision myself two years from now — grounded, creatively fulfilled, emotionally unflutterable, and living inside a life that finally fits. New York City? Beverly Hills? Portland? Honestly, I could see myself just about anywhere—EXCEPT Western Colorado.
             </p>
           </div>
 
-          <span class="gold-pulse">THIS PLACE IS NOT GOING TO BE THE DEATH OF ME!</span>
+          <span class="gold-pulse">THIS PLACE IS NOT GOING TO BE THE DEATH OF ME!</span><br> <br>
         </div>
       </details>
 
@@ -112,18 +109,7 @@
 
           <div class="hv-happy-ending">
             <p class="bio-text">
-              Marcello W. — Italian, emotionally literate, impeccably dressed, and
-              fully capable of handling Harperville energy without flinching.
-              My future Daddy does NOT have to be Italian. Nor come from wealth.
-              He will, and absolutely MUST be:
-              Trauma Informed
-              Emotionally Mature
-              Patient
-              A breadth of mental health understanding and acceptance.
-              His name doesn't have to be Marcello. Somehow, my intuition tells me 
-              that will be their name, or at least their first name will start with
-              an 'M' and their last name a 'W'... even though Italian surnames don't 
-              actually start with that letter.
+              Marcello W. — Italian, emotionally literate, impeccably dressed, and fully capable of handling Harperville energy without flinching. My future Daddy does NOT have to be Italian. Nor come from wealth. He will, and absolutely MUST be: Trauma Informed, Emotionally Mature, Patient. He must be armored with a breadth of mental health understanding and acceptance. His name doesn't have to be Marcello. Somehow, my intuition tells me that will be their name, or at least their first name will start with an 'M' and their last name a 'W'... even though Italian surnames don't actually start with that letter.
             </p>
           </div>
         </div>
@@ -142,11 +128,7 @@
 
           <div class="hv-happy-ending">
             <p class="bio-text">
-              A shared future built on intention, humor, mutual admiration, and the
-              quiet confidence of choosing each other on purpose. This is the loving
-              companionship I envision. We can travel, sure. But I'd be just as 
-              smitten by staying in most nights, curled up with our hands intertwined,
-              watching television or a movie. Possibilities, Possibilities, Possibilities!
+              A shared future built on intention, humor, mutual admiration, and the quiet confidence of choosing each other on purpose. This is the loving companionship I envision. We can travel, sure. But I'd be just as smitten by staying in most nights, curled up with our hands intertwined, watching television or a movie. Possibilities, Possibilities, Possibilities!
             </p>
           </div>
         </div>
