added blog post updated statues

--- a/ledger.html
+++ b/ledger.html
@@ -28,6 +28,13 @@
         <div class="blog-grid">
 
             <article class="blog-card">
+                <div class="blog-date">Dec 27, 2025</div>
+                <h3>The Night that Went Long</h3>
+                <p class="blog-summary">Humans think the nights are getting longer. They are not. Humans are simply more aware of them.</p>
+                <a href="/blog/2025/DEC/12-27-25-the-night-that-went-long.html" class="read-more">READ ENTRY <i class="fa-solid fa-chevron-right"></i></a>
+            </article>
+
+            <article class="blog-card">
                 <div class="blog-date">Dec 26, 2025</div>
                 <h3>A New Day</h3>
                 <p class="blog-summary">I’m not out of the woods — but I’m not lost in them either.</p>
