updating styling on about jack page and css widthd for dossier

--- a/about-jack-aspen-harper.html
+++ b/about-jack-aspen-harper.html
@@ -64,7 +64,7 @@
     <section class="bio-container">
   <img src="/assets/images/jack-aspen-harper-bio.png" alt="Jack Aspen Harper" class="bio-image">
 
-  <h1 class="bio-title">About Jack Aspen Harper</h1> <br>
+  <h1 class="gold-pulse">About Jack Aspen Harper</h1> <br>
   <button class="hv-modal-trigger" data-modal-open="hvTimelineModal">
   Open chronology log
 </button>
@@ -88,7 +88,7 @@
 </section>
 
 <aside class="jack-dossier">
-  <h2 class="dossier-title">Personnel File: J.A. Harper</h2>
+  <h2 class="gold-pulse">Personnel File: J.A. Harper</h2>
 
   <ul class="dossier-list">
     <li><strong>Name:</strong> Jack Aspen Harper</li>
