updated line fixes on about page

--- a/about-jack-aspen-harper.html
+++ b/about-jack-aspen-harper.html
@@ -62,9 +62,9 @@
     </header>
 
     <section class="bio-container">
-  <img src="/assets/images/jack-aspen-harper-bio.png" alt="Jack Aspen Harper" class="bio-image">
+  <img src="/assets/images/jack-aspen-harper-bio.png" alt="Jack Aspen Harper - Mythic Creator, Author, Schizophrenia and Disability Advocate" class="bio-image"><br>
 
-  <h1 class="gold-pulse">About Jack Aspen Harper</h1> <br>
+  <h1 class="gold-pulse">About Jack Aspen Harper</h1><br>
   <button class="hv-modal-trigger" data-modal-open="hvTimelineModal">
   Open chronology log
 </button>
