--- a/harperville-astro.html
+++ b/harperville-astro.html
@@ -54,297 +54,86 @@
       <a href="mainframe.html" class="exit-link"><i class="fa-solid fa-arrow-left"></i> RETURN TO MAINFRAME</a>
     </header>
 
-    <section class="bio-container astro-wrap">
-      <h1 class="bio-title"><span class="gold-pulse">HARPERVILLE ASTRO PORTAL</span></h1>
-      <p class="bio-text">
-  Enter your birth data to begin a natal chart on a trusted astrology platform, then return here to translate the cosmos with Ivy Willow.
-</p>
-<ol class="astro-small" style="margin-top:.5rem;">
-  <li>Enter your birth date, time, and birth town.</li>
-  <li>Submit the form on Astro.com.</li>
-  <li>Select “Chart Drawing” or “Extended Chart Selection.”</li>
-  <li>Return here and enter your Sun, Moon, and Rising.</li>
-</ol>
+  <section class="bio-container astro-wrap cam-white-feature">
 
-      <div class="astro-cardish">
-        <h3 class="bio-title" style="margin-top:0;">1) Birth data input</h3>
+  <h1 class="bio-title">
+    <span class="gold-pulse">WEEKLY COSMIC WEATHER</span>
+  </h1>
 
-        <form id="astro-form" class="astro-grid" autocomplete="on">
-          <div class="astro-col-6">
-            <label class="astro-label" for="birth-date">Birthday</label>
-            <input class="astro-input" id="birth-date" name="birth-date" type="date" required />
-          </div>
+  <p class="bio-text">
+    Jack is deeply interested in astrology and numerology — foundational tools they consider when making major life decisions.
+    Astrology is a science; you don’t have to tell them twice.
+  </p>
 
-          <div class="astro-col-6">
-            <label class="astro-label" for="birth-time">Time of birth</label>
-            <div class="astro-row">
-              <input class="astro-input" id="birth-time" name="birth-time" type="time" />
-              <label class="astro-small">
-                <input id="time-unknown" type="checkbox" />
-                Time unknown (use noon)
-              </label>
-            </div>
-            <div class="astro-small">If you don’t know the time, noon is a common approximation. Rising/house accuracy may vary.</div>
-          </div>
+  <p class="bio-text">
+    Rather than reinvent the wheel, Harperville™ highlights voices doing the work well.
+    Cam White is one of the most respected and recognizable figures in modern astrology.
+    His weekly forecasts help viewers integrate current transits into real‑world logic —
+    almost always unfiltered, sometimes coy, and consistently insightful.
+  </p>
 
-          <div class="astro-col-12">
-            <label class="astro-label" for="birth-place">Place of birth</label>
-            <input class="astro-input" id="birth-place" name="birth-place" type="text" placeholder="City, State/Region, Country (e.g., Westfield, IN USA)" required />
-            <div class="astro-small">Tip: use the most official spelling your birthplace uses.</div>
-          </div>
-
-          <div class="astro-col-12">
-            <div class="astro-row">
-              <button class="astro-btn" type="submit">
-                <i class="fa-solid fa-chart-pie"></i> Generate chart link
-              </button>
-
-              <button class="astro-btn" type="button" id="copy-summary">
-                <i class="fa-solid fa-copy"></i> Copy my birth data
-              </button>
-            </div>
-          </div>
-        </form>
-
-        <div id="astro-results" class="astro-results">
-          <h3 class="bio-title">2) Your generated links</h3>
-          <p class="astro-small">
-            Use the link below to generate your natal chart on a leading chart site. After you’ve got your placements, paste the “Big Three” back into Harperville for the fun part.
-          </p>
-
-          <div class="astro-kv">
-            <div><strong>Chart link</strong></div>
-            <div><a id="chart-link" href="#" target="_blank" rel="noopener">Open chart generator</a></div>
-<p class="astro-small" style="margin-top: 0.5rem;">
-  🐾 <strong><em>Your chart opens on Astro.com in a new tab. Return here to translate the cosmos into meaning.</em></strong>
-</p>
-
-            <div><strong>Birth data</strong></div>
-            <div id="birth-summary"></div>
-          </div>
-
-          <div style="margin-top:.75rem;">
-            <span class="astro-pill">Sun</span>
-            <span class="astro-pill">Moon</span>
-            <span class="astro-pill">Rising</span>
-            <span class="astro-pill">Mercury</span>
-            <span class="astro-pill">Venus</span>
-            <span class="astro-pill">Mars</span>
-          </div>
-<div class="astro-cardish" style="margin-top:1rem;">
-  <h3 class="bio-title">Your Big Three</h3>
-
-  <div class="astro-grid">
-    <div class="astro-col-4">
-      <label class="astro-label">Sun Sign</label>
-      <input class="astro-input" id="sun-sign" placeholder="e.g., Taurus">
-    </div>
-
-    <div class="astro-col-4">
-      <label class="astro-label">Moon Sign</label>
-      <input class="astro-input" id="moon-sign" placeholder="e.g., Cancer">
-    </div>
-
-    <div class="astro-col-4">
-      <label class="astro-label">Rising Sign</label>
-      <input class="astro-input" id="rising-sign" placeholder="e.g., Leo">
+  <!-- Responsive Video Embed -->
+  <div class="astro-cardish video-wrapper">
+    <div class="video-responsive">
+      <iframe
+        src="https://www.youtube.com/embed/ljrqdCu3zBM"
+        title="Cam White Weekly Astrology Forecast"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+      </iframe>
     </div>
   </div>
-</div>
 
-<div class="astro-cardish" style="margin-top:1rem;">
-  <h3 class="bio-title">Ivy Willow’s Weekly Briefing</h3>
+  <!-- CTA -->
+  <div class="astro-cardish cta-wrap">
+    <p class="astro-small">
+      Launching January 2026:
+      Want deeper chart tools and ongoing insights?
+      Explore Cam White’s astrology platform below.
+    </p>
 
-  <div id="ivy-briefing" class="astro-small">
-    Enter your Sun, Moon, and Rising above to receive Ivy Willow’s guidance.
+    <a
+      href="https://www.startek.world"
+      target="_blank"
+      rel="noopener"
+      class="astro-btn startek-btn">
+      Download the StarTek app TODAY!
+    </a>
   </div>
 
-  <button class="astro-btn" id="generate-briefing" style="margin-top:.75rem;">
-    Generate Weekly Briefing
-  </button>
-</div>
+</section>
 
-          <p class="astro-small" style="margin-top:1rem;">
-            Next phase: We’ll pull natal + transits directly via an API so Harperville generates the weekly forecast automatically.
-          </p>
-        </div>
-      </div>
+ <script>
+  const starImages = [
+    'assets/images/star-1.png',
+    'assets/images/star-2.png',
+    'assets/images/star-3.png',
+    'assets/images/star-4.png',
+    'assets/images/star-5.png',
+    'assets/images/star-6.png',
+    'assets/images/star-7.png'
+  ];
 
-      <div class="astro-cardish" style="margin-top:1rem;">
-        <h3 class="bio-title" style="margin-top:0;">3) Weekly transit briefing</h3>
-        <p class="astro-small">
-          Coming online next: a personalized weekly forecast based on your natal chart + current transits. For now, this portal is building the foundation and making the process effortless.
-        </p>
-      </div>
-    </section>
-  </main>
+  function createStar() {
+    const star = document.createElement('img');
+    star.src = starImages[Math.floor(Math.random() * starImages.length)];
+    star.className = 'star-fall';
 
-  <script>
-  // =========================
-  // Core DOM References
-  // =========================
-  const form = document.getElementById('astro-form');
-  const timeUnknown = document.getElementById('time-unknown');
-  const birthTime = document.getElementById('birth-time');
-  const results = document.getElementById('astro-results');
-  const chartLink = document.getElementById('chart-link');
-  const birthSummary = document.getElementById('birth-summary');
-  const copyBtn = document.getElementById('copy-summary');
+    star.style.left = Math.random() * 100 + 'vw';
+    star.style.animationDuration = 6 + Math.random() * 6 + 's';
+    star.style.width = 12 + Math.random() * 12 + 'px';
 
-  const sunInput = document.getElementById("sun-sign");
-  const moonInput = document.getElementById("moon-sign");
-  const risingInput = document.getElementById("rising-sign");
-  const ivyBriefing = document.getElementById("ivy-briefing");
-  const clearBig3Btn = document.getElementById("clear-big3");
+    document.body.appendChild(star);
 
-  const HV_BIG3_KEY = "harperville_astro_big3";
-
-  // =========================
-  // Time Unknown Toggle
-  // =========================
-  timeUnknown.addEventListener('change', () => {
-    if (timeUnknown.checked) {
-      birthTime.value = '12:00';
-      birthTime.setAttribute('disabled', 'disabled');
-    } else {
-      birthTime.removeAttribute('disabled');
-      birthTime.value = '';
-    }
-  });
-
-  // =========================
-  // Utility Functions
-  // =========================
-  function summaryText({ date, time, place }) {
-    return `Birthday: ${date}\nTime: ${time || 'Unknown'}\nPlace: ${place}`;
+    setTimeout(() => {
+      star.remove();
+    }, 12000);
   }
 
-  function getBig3() {
-    return {
-      sun: (sunInput?.value || "").trim(),
-      moon: (moonInput?.value || "").trim(),
-      rising: (risingInput?.value || "").trim(),
-      savedAt: new Date().toISOString()
-    };
-  }
-
-  function saveBig3() {
-    localStorage.setItem(HV_BIG3_KEY, JSON.stringify(getBig3()));
-  }
-
-  function loadBig3() {
-    const raw = localStorage.getItem(HV_BIG3_KEY);
-    if (!raw) return null;
-    try {
-      return JSON.parse(raw);
-    } catch {
-      return null;
-    }
-  }
-
-  // =========================
-  // Auto‑Load Big Three
-  // =========================
-  const savedBig3 = loadBig3();
-  if (savedBig3) {
-    sunInput.value = savedBig3.sun || "";
-    moonInput.value = savedBig3.moon || "";
-    risingInput.value = savedBig3.rising || "";
-
-    ivyBriefing.textContent =
-      `Saved chart detected: Sun ${savedBig3.sun || "?"}, Moon ${savedBig3.moon || "?"}, Rising ${savedBig3.rising || "?"}. Ivy Willow is on standby.`;
-  }
-
-  // =========================
-  // Auto‑Save on Input
-  // =========================
-  [sunInput, moonInput, risingInput].forEach(el => {
-    el.addEventListener("input", saveBig3);
-    el.addEventListener("change", saveBig3);
-  });
-
-  // =========================
-  // Birth Chart Generator (Astro.com)
-  // =========================
-  form.addEventListener('submit', (e) => {
-    e.preventDefault();
-
-    const date = document.getElementById('birth-date').value;
-    const time = document.getElementById('birth-time').value || (timeUnknown.checked ? '12:00' : '');
-    const place = document.getElementById('birth-place').value.trim();
-
-    // Astro.com guest birth‑data entry page
-    const url = "https://www.astro.com/cgi/ade.cgi?ession=0";
-
-    chartLink.href = url;
-    chartLink.textContent = "Open Astro.com birth data entry";
-
-    birthSummary.textContent = summaryText({
-      date,
-      time: time || 'Unknown',
-      place
-    });
-
-    results.classList.add('open');
-    results.scrollIntoView({ behavior: 'smooth', block: 'start' });
-  });
-
-  // =========================
-  // Copy Birth Data
-  // =========================
-  copyBtn.addEventListener('click', async () => {
-    const date = document.getElementById('birth-date').value;
-    const time = document.getElementById('birth-time').value || (timeUnknown.checked ? '12:00' : 'Unknown');
-    const place = document.getElementById('birth-place').value.trim() || 'Unknown';
-
-    const text = summaryText({ date: date || 'Unknown', time, place });
-    try {
-      await navigator.clipboard.writeText(text);
-      copyBtn.innerHTML = '<i class="fa-solid fa-check"></i> Copied';
-      setTimeout(() => {
-        copyBtn.innerHTML = '<i class="fa-solid fa-copy"></i> Copy my birth data';
-      }, 1200);
-    } catch {
-      alert(text);
-    }
-  });
-
-  // =========================
-  // Ivy Willow Weekly Briefing
-  // =========================
-  document.getElementById("generate-briefing").addEventListener("click", () => {
-    saveBig3();
-
-    const sun = sunInput.value;
-    const moon = moonInput.value;
-    const rising = risingInput.value;
-
-    if (!sun || !moon || !rising) {
-      ivyBriefing.textContent =
-        "Ivy Willow requires all three signs to proceed.";
-      return;
-    }
-
-    ivyBriefing.textContent =
-      `With ${sun} grounding your core, ${moon} guiding your emotional weather, and ${rising} shaping how the world meets you, this week favors intentional pacing. Choose presence over urgency. Ivy Willow suggests fewer promises — and deeper follow‑through.`;
-  });
-
-  // =========================
-  // Clear Big Three
-  // =========================
-  if (clearBig3Btn) {
-    clearBig3Btn.addEventListener("click", () => {
-      localStorage.removeItem(HV_BIG3_KEY);
-
-      sunInput.value = "";
-      moonInput.value = "";
-      risingInput.value = "";
-
-      ivyBriefing.textContent =
-        "Big Three cleared. Ivy Willow awaits fresh coordinates.";
-    });
-  }
+  setInterval(createStar, 1200);
 </script>
+     
 
 
 </body>
