updated disclaimer on astro page

--- a/harperville-astro.html
+++ b/harperville-astro.html
@@ -59,7 +59,10 @@
   <h1 class="bio-title">
     <span class="gold-pulse">WEEKLY COSMIC WEATHER</span>
   </h1>
-
+<p class="hv-disclaimer-text">
+  Content on this page, including personal commentary and external links, reflects individual views and creative interpretation. This page is not affiliated with or endorsed by any public figures, creators, platforms, or organizations mentioned herein. All referenced names, brands, and media remain the property of their respective owners. </p>
+  <br>
+  <br>
   <p class="bio-text">
     Jack is deeply interested in astrology and numerology — foundational tools they consider when making major life decisions.
     Astrology is a science; you don’t have to tell them twice.
