--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ document.getElementById("gateway").addEventListener("click", (e) => {
 </script>
 <br>
 <br>
-    <section><a href="https://www.trumpactiontracker.info" target="_blank" class="btn-monkey">I'D RATHER BE EATEN BY A FLYING MONKEY</a></section>
+    <section><a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank" class="btn-monkey">RELEASE THE FLYING MONKEYS!</a></section>
 
 
 
