--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <main class="container">
         <header class="hero">
     <div class="spectral-logo-container">
-        <img src="assets/images/harperville-logo.png" alt="Harperville Sovereign Logo" class="main-logo">
+        <img src="assets/images/harperville-logo.png" alt="Harperville™: Where Jack Aspen Harper can still be a kid!" class="main-logo">
     </div>
     <p class="subtitle">117 Poppy Field Way, The Emerald City, OZ 71025</p>
 </header>
