--- a/mainframe.html
+++ b/mainframe.html
@@ -86,6 +86,15 @@
     </div>
 </div>
 
+<a href="harperville-astro.html" class="card ledger-card">
+                <div class="card-content">
+                    <i class="fa-solid fa-moon icon-large"></i>
+                    <h3>What's in the Stars?</h3>
+                    <p class="role">Weekly Horoscopes:</p>
+                    <p class="role">by Cam White on YouTube</p>
+                </div>
+            </a>
+
            <div class="card music-card" style="padding: 0; overflow: hidden;">
 <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="450" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/playlist/jacks-december-pix/pl.u-d2b05VluL1L1d2J"></iframe>
     </div>
