updated schema for cam

--- a/harperville-astro.html
+++ b/harperville-astro.html
@@ -45,6 +45,38 @@
       .astro-kv { grid-template-columns: 1fr; }
     }
   </style>
+
+  {
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "@id": "https://www.camwhiteastro.com/#person",
+  "name": "Cam White",
+  "alternateName": "Cam White Astro",
+  "url": "https://www.camwhiteastro.com/",
+  "description": "Cam White is a professional astrologer and educator known for practical, transit-based astrology. He produces weekly forecasts, educational content, and tools designed to help individuals apply astrology to real-world decision-making.",
+  "jobTitle": "Professional Astrologer",
+  "knowsAbout": [
+    "Astrology",
+    "Natal Charts",
+    "Planetary Transits",
+    "Zodiac Signs",
+    "Astrological Forecasting",
+    "Astrology Education"
+  ],
+  "sameAs": [
+    "https://www.camwhiteastro.com/",
+    "https://www.youtube.com/channel/UCgUKRKwSFapWtEa940OlJBg",
+    "https://www.instagram.com/camwhiteastro/",
+    "https://open.spotify.com/show/0OGCGdd7niWHySeCpwLjSj",
+    "https://www.startek.world/"
+  ],
+  "worksFor": {
+    "@type": "Organization",
+    "name": "StarTek Astrology App",
+    "url": "https://www.startek.world/"
+  }
+}
+
 </head>
 
 <body>
