fixed schema on astro page

--- a/harperville-astro.html
+++ b/harperville-astro.html
@@ -45,7 +45,7 @@
       .astro-kv { grid-template-columns: 1fr; }
     }
   </style>
-
+ <script type="application/ld+json"></script>
   {
   "@context": "https://schema.org",
   "@type": "Person",
@@ -76,7 +76,7 @@
     "url": "https://www.startek.world/"
   }
 }
-
+</script>
 </head>
 
 <body>
