now fixed the script

--- a/harperville-astro.html
+++ b/harperville-astro.html
@@ -45,7 +45,7 @@
       .astro-kv { grid-template-columns: 1fr; }
     }
   </style>
- <script type="application/ld+json"></script>
+ <script type="application/ld+json">
   {
   "@context": "https://schema.org",
   "@type": "Person",
