Added disclaimer to ledger page.

--- a/ledger.html
+++ b/ledger.html
@@ -24,8 +24,11 @@
                 <i class="fa-solid fa-bullhorn"></i> HARPERVILLE™ PR WIRE
             </button>
         </header>
-
-        <div class="blog-grid">
+        <br>
+<p class="hv-disclaimer-text">
+  Content on this page, including personal commentary and external links, reflects individual views and creative interpretation. This page is not affiliated with or endorsed by any public figures, creators, platforms, or organizations mentioned herein. All referenced names, brands, and media remain the property of their respective owners. </p>
+  <br>     
+  <div class="blog-grid">
 
             <article class="blog-card">
                 <div class="blog-date">Dec 27, 2025</div>
