updated cafe message board to Base44 free app iframe link

--- a/cafe.html
+++ b/cafe.html
@@ -106,7 +106,7 @@
 
     <section class="cafe-board-wrapper">
       <iframe
-        src="https://groups.google.com/g/harperville-cafe"
+        src="https://harperville-cafe-1cbd68d4.base44.app"
         class="cafe-board-frame"
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"
