linked cafe to main-vault... changed page aesthetics

--- a/main-vault.html
+++ b/main-vault.html
@@ -18,6 +18,17 @@
 
     <div class="bento-grid">
     
+<!-- Harperville™ Cafe -->
+      <a href="/cafe.html" class="card">
+  <div class="card-content">
+    <i class="fa-solid fa-comments icon-large"></i>
+    <h3>Harperville™ Cafe</h3>
+    <p>Message board & community hub.</p>
+    <p class="gold-pulse">NOW OPEN! ENTER THE CHAT.</p>
+  </div>
+</a>
+
+
      <!-- Harperville™ Glossary -->
       <a href="/hv-glossary.html" class="card">
         <div class="card-content">
@@ -48,16 +59,6 @@
   </div>
 </a>
 
-<!-- Harperville™ Cafe -->
-      <a href="#" class="card">
-        <div class="card-content">
-          <i class="fa-solid fa-comments icon-large"></i>
-          <h3>Harperville™ Cafe</h3>
-          <p>Message board & community hub.</p>
-          <h2>Arrival is soonific!</h2>
-        </div>
-      </a>
-
       <!-- Herstory -->
       <a href="#" class="card">
         <div class="card-content">
@@ -81,8 +82,8 @@
         <div class="card-content">
           <i class="fa-solid fa-shirt icon-large"></i>
           <h3>The Catwalk</h3>
-          <p>Fashion, accessories, and future brand.</p>
-          <h2>Coming AFTER Jack's spinal surgery.</h2>
+          <p>Fashion, accessories, and future apparel brand.</p>
+          <p class="ruby-crust-text">Coming AFTER Jack's spinal surgery.</p>
         </div>
       </a>
 
