more main-vault aesthetic upgrades

--- a/main-vault.html
+++ b/main-vault.html
@@ -24,7 +24,7 @@
     <i class="fa-solid fa-comments icon-large"></i>
     <h3>Harperville™ Cafe</h3>
     <p>Message board & community hub.</p>
-    <p class="gold-pulse">NOW OPEN! ENTER THE CHAT.</p>
+    <p class="gold-pulse"><strong>NOW OPEN! ENTER THE CHAT.</strong></p>
   </div>
 </a>
 
@@ -55,7 +55,7 @@
   <div class="card-content">
     <i class="fa-solid fa-book icon-large"></i>
     <h3>The Books</h3>
-    <p>They USED to be an Award-winning Gay Romance Author. Care to take a literal literary roller-coaster ride?</p>
+    <p class="emerald-crust-text"><strong>They USED to be an Award-winning Gay Romance Author. Care to take a literal literary roller-coaster ride?</strong></p>
   </div>
 </a>
 
@@ -83,7 +83,7 @@
           <i class="fa-solid fa-shirt icon-large"></i>
           <h3>The Catwalk</h3>
           <p>Fashion, accessories, and future apparel brand.</p>
-          <p class="ruby-crust-text">Coming AFTER Jack's spinal surgery.</p>
+          <p class="ruby-crust-text"><strong>Coming AFTER Jack's spinal surgery.</strong></p>
         </div>
       </a>
 
